Week 4 Task 2 - .gitignore update and another laravel install.

--- a/webAppDev/week4/.gitignore
+++ b/webAppDev/week4/.gitignore
@@ -1,1 +1,9 @@
-/task1
+/*
+!.gitignore
+!task2/
+task2/*
+!task2/greetings/
+task2/greetings/*
+!task2/greetings/routes/
+task2/greetings/routes/*
+!task2/greetings/routes/web.php
